--- a/giveNtake_frontend/public/index.html
+++ b/giveNtake_frontend/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="Airline Reservation Carrie Sophie" content="width=device-width,initial-scale=1.0">
+    <meta name="giveNtake" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Airline Reservation Carrie Sophie</title>
+    <title>givieNtake</title>
   </head>
   <body>
     <noscript>
